<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.favorite.FavoriteActivity">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/txtFavMov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/favorite_movie"
        android:textSize="25sp"
        android:textColor="#FFC300"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emptyMovFav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/you_don_t_have_any_favorite_movie"
        android:textSize="15sp"
        android:textColor="#FFC300"
        app:layout_constraintTop_toBottomOf="@id/txtFavMov"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_FavMov"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        tools:listitem="@layout/item_fav"
        app:layout_constraintTop_toBottomOf="@id/txtFavMov"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtFavTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/favorite_tv_show"
        android:textSize="25sp"
        android:textColor="#FFC300"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emptyTVFav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/you_don_t_have_any_favorite_tv_show"
        android:textSize="15sp"
        android:textColor="#FFC300"
        app:layout_constraintTop_toBottomOf="@id/txtFavTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_FavTV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        tools:listitem="@layout/item_fav"
        app:layout_constraintTop_toBottomOf="@id/txtFavTV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>