<resources>
    <string name="app_name">Moorite</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="movies">MOVIES</string>
    <string name="tvshows">TV SHOWS</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="movie_poster">this is movie poster</string>
    <string name="tvshow_poster">this is tv show poster</string>
    <string name="poster_container">this is poster container</string>
    <string name="poster">this is poster</string>
    <string name="title">title</string>
    <string name="release">release</string>
    <string name="genre">genre</string>
    <string name="duration">duration</string>
    <string name="score">score</string>
    <string name="storyline">Storyline</string>
    <string name="synopsis">Synopsis</string>
    <string name="logo">this is logo</string>
    <string name="star">this is a star</string>
    <string name="background">this is background</string>
    <string name="this_is_fav_button">This is fav button</string>
    <string name="message_undo">Undo deleted the previous item?</string>
    <string name="message_ok">OK</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="favorite_movie">FAVORITE MOVIE</string>
    <string name="favorite_tv_show">FAVORITE TV SHOW</string>
    <string name="you_don_t_have_any_favorite_tv_show">You don\'t have any favorite tv show.</string>
    <string name="you_don_t_have_any_favorite_movie">You don\'t have any favorite movie.</string>
</resources>